# nominal

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PLAN.md  README.md  example_processor.py  main.py  pyproject.toml
data/: README.md  first_names.txt  last_names.txt
docs/: architecture.md  milestone2_summary.md  name_extraction_strategy.md  processor.md
docs/logging/: README.md
examples/: README.md  example_logging.py  example_processor.py  example_project_logging.py
rules/: 1099-div.yaml  1099-misc.yaml  README.md  global-variables.yaml  w2.yaml
rules/forms/: 1099-div.yaml  1099-misc.yaml  w2.yaml
rules/global/: person-info.yaml
scripts/: README.md  generate_name_dictionaries.py  update_changelog_stats.sh
src/nominal/: __init__.py  logging_config.py  main.py  processor.py  reader.py  scripts_derived.py
src/nominal/logging/: __init__.py  config.py
src/nominal/orchestrator/: __init__.py  orchestrator.py
src/nominal/processor/: __init__.py  action.py  criterion.py  enums.py  parser.py  processor.py  rule.py  variable.py
src/nominal/reader/: __init__.py  reader.py
src/nominal/rules/: __init__.py  action.py  criterion.py  enums.py  manager.py  name_validator.py  parser.py  rule.py  validator.py  variable.py
src/nominal/scripts/: __init__.py  generate_names.py
test/nominal/: test_processor.py  test_processor_integration.py  test_reader.py  test_reader_integration.py
test/nominal/logging/: __init__.py
test/nominal/orchestrator/: test_orchestrator.py
tools/: README.md  validate_rules.py
(+8 files in other folders)
