[project]
name = "nominal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf",
    "pytesseract",
    "pillow",
    "pyyaml",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
